2012-10-02         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi (Glossary). Correct the full name for `ISO' per
	bug report from William Bresler <wbresler@acm.org>. Add a link
	to the ISO website.

2012-09-23         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi (Nextfile Statement): Document that it's now part of POSIX
	and update the title.
	(Delete): Document that `delete array' is now part of POSIX.
	* awkcard.in: Adjust coloring for nextfile and delete array.

2012-08-12         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi (Ranges and Locales): Clarified ranges and
	locales. Again.

2012-08-05         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi (PC Binary Installation): Document Eli Zaretskii's
	site.
	(Records): Update case of RS = "a". It only prints 1 if in
	POSIX mode. Thanks to Jeroen Schot who first reported it.

2012-07-20         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi (Ranges and Locales): Clarified ranges and
	locales.

2012-07-13         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi (Getline Notes): Discuss side effects in
	argument expression.

2012-06-29         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi, awkcard.in: Latest mawk understands /dev/stdin.

2012-04-27         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi: Add that -b affects output.

2012-04-27         Arnold D. Robbins     <arnold@skeeve.com>

	* texinfo.tex: Update to latest from automake 1.12.

2012-04-09         Arnold D. Robbins     <arnold@skeeve.com>

	* texinfo.tex: Update to latest from automake 1.11.4.

2012-03-28         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.0.1: Release tar ball made.

2012-02-10         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi, awkcard.in: Bump patch level.
	* texinfo.tex: Updated from Texinfo CVS.

2011-12-06         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi: Various typo fixes from mailing list.
