@@ -1,3 +1,8 @@
+2012-10-13         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am: Add dgawk.1 to man page links created / removed
+	on install / uninstall.
+
 2012-10-02         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawk.texi (Glossary). Correct the full name for `ISO' per
